Consertei o bug do background

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -8,7 +8,7 @@
 
     body {
       padding-top: 5vh;
-      background-image: url(/img/bg-register-page.jpg);
+      background-image: url(../img/bg-register-page.jpg);
       background-size: cover;
       background-position-y: -150px;
     }
